# design-patterns

decorator/: CMakeLists.txt  uml.drawio
decorator/include/: Beverage.h  CondimentDecorator.h  Espresso.h  HouseBlend.h  Mocha.h  Soy.h  Whip.h
decorator/src/: App.cpp  Espresso.cpp  HouseBlend.cpp  Mocha.cpp  Soy.cpp  Whip.cpp
singleton/: Singleton.cpp  a.out
strategy/: App.cpp  CMakeLists.txt  PaypalPayment.h  ShoppingCart.h
strategy/include/: CreditCardPayment.h  PaymentStrategy.h  ShoppingCart.h
strategy/src/: App.cpp  CreditCardPayment.cpp  PaypalPayment.cpp  ShoppingCart.cpp
